Integración de creación de diagramas en el sistema (aún en desarrollo)

--- a/web/css/master.css
+++ b/web/css/master.css
@@ -225,3 +225,8 @@ textarea:active, textarea:focus{
 	color: #FFF;
 	background-color: #049;
 }
+
+.sidebar .nav a.active{
+    background-color: #222;
+    color: #FFF;
+}
